<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context=".activity.activity.LoginLonginActivity">
    <ImageView
        android:layout_width="67dp"
		android:background="@android:color/white"
        android:id="@+id/iv_logo"
        android:layout_marginTop="46dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/login_logo"
        android:layout_height="64dp" />
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="280dp"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@id/iv_logo"
        android:layout_height="218dp">
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_mail"
                android:src="@mipmap/login_mail"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:id="@+id/et_login_email"
                android:text="767986297@qq.com"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_mail"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_mail"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_below="@id/rl1"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_lock1"
                android:src="@mipmap/login_lock"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_pwd"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:text="qq123"
                android:id="@+id/et_login_pwd"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_lock1"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/iv_login_show_pwd"
                android:src="@mipmap/login_hide_password"
                android:layout_alignParentRight="true"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_lock1"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>

        <Button
            android:layout_width="230dp"
            android:layout_height="36dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:id="@+id/bt_login"
            android:text="@string/login_login_bt"
            android:background="@drawable/bt_register_verification"
            android:layout_marginTop="36dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/rl2"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/rl"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="85dp"
        android:id="@+id/tv_login_forget_pwd"
        android:text="@string/login_login_forget"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/rl"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="85dp"
        android:id="@+id/tv_login_toregister"
        android:text="@string/login_login_toregister"/>
    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:id="@+id/tv_orther"
            android:layout_centerHorizontal="true"
            android:text="@string/login_login_orther"/>
        <View
            android:layout_width="wrap_content"
            android:layout_marginLeft="85dp"
            android:background="#f2f2f2"
            android:layout_marginTop="8dp"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/tv_orther"
            android:layout_height="1dp"></View>
        <View
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/tv_orther"
            android:background="#f2f2f2"
            android:layout_marginTop="8dp"
            android:layout_marginRight="85dp"
          android:layout_marginLeft="5dp"
            android:layout_height="1dp"></View>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/login_we_chat"
            android:id="@+id/iv_login_wechat"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_below="@id/tv_orther"/>
    </RelativeLayout>
</RelativeLayout>