<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context=".activity.activity.LoginRegisterActivity">
    <ImageView
        android:layout_width="67dp"
        android:id="@+id/iv_logo"
		 android:background="@android:color/white"
        android:layout_marginTop="46dp"
        android:layout_centerHorizontal="true"
       android:src="@mipmap/login_logo"
        android:layout_height="64dp" />
    <RelativeLayout

        android:layout_width="280dp"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@id/iv_logo"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"

                android:id="@+id/iv_mail"

                android:src="@mipmap/login_mail"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:id="@+id/et_register_email"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
               android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_mail"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="58dp"
                android:layout_height="20dp"
                android:text="获取验证码"
                android:textSize="10sp"
                android:id="@+id/bt_register_verification"
                android:textColor="@android:color/white"
                android:background="@drawable/bt_register_verification"
                android:layout_alignParentRight="true"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_mail"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_below="@id/rl1"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_verification"
                android:src="@mipmap/login_verification_code"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_verification"
                android:paddingBottom="10dp"
                android:id="@+id/et_register_verification"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_verification"
                android:layout_height="wrap_content" />
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_verification"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_below="@id/rl2"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_lock1"
                android:src="@mipmap/login_lock"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_pwd"
                android:paddingBottom="10dp"
                android:inputType="textPassword"
                android:id="@+id/et_register_pwd"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_lock1"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/iv_register_show_pwd_1"
                android:src="@mipmap/login_hide_password"
                android:layout_alignParentRight="true"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_lock1"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_below="@id/rl3"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_lock2"
                android:src="@mipmap/login_lock"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_pwd_agin"
                android:inputType="textPassword"
                android:paddingBottom="10dp"
                android:id="@+id/et_register_pwd_again"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_lock2"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/iv_register_show_pwd_2"
                android:src="@mipmap/login_hide_password"
                android:layout_alignParentRight="true"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_lock2"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl5"
            android:layout_below="@id/rl4"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/iv_invitatiion"
                android:src="@mipmap/login_invitatiion_code"/>
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_invitation"
                android:paddingBottom="10dp"
                android:id="@+id/et_register_invitatiion"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/iv_invitatiion"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register_et_check"
                android:layout_marginTop="5dp"
                android:textSize="10sp"
                android:textColor="#333333"
                android:layout_alignParentRight="true"/>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="230dp"
                android:layout_below="@id/iv_invitatiion"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
        <Button
            android:layout_width="230dp"
            android:layout_height="36dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:id="@+id/bt_register"
            android:text="@string/login_register_bt"
            android:background="@drawable/bt_register_verification"
            android:layout_marginTop="26dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/rl5"/>
    </RelativeLayout>
</RelativeLayout>