<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    tools:context=".activity.activity.LoginForgetPassWordActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:src="@mipmap/login_back"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:id="@+id/iv_forget_back"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="忘记密码"
        android:textSize="14sp"
        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>
    <RelativeLayout
        android:layout_width="280dp"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_email"
                android:paddingBottom="10dp"
                android:id="@+id/et_forget_email"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content" />
            <Button
                android:layout_width="58dp"
                android:layout_height="20dp"
                android:text="获取验证码"
                android:textSize="10sp"
                android:id="@+id/bt_forget_verification"
                android:textColor="@android:color/white"
                android:background="@drawable/bt_register_verification"
                android:layout_alignParentRight="true"/>
            <View
                android:layout_width="230dp"
                android:layout_below="@id/et_forget_email"
                android:layout_height="1dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_below="@id/rl1"
            android:layout_width="230dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:hint="@string/login_register_et_verification"
                android:paddingBottom="10dp"
                android:id="@+id/et_forget_verification"
                android:background="@null"
                android:layout_marginTop="2dp"
                android:textSize="14sp"
                android:layout_marginLeft="16dp"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="230dp"
                android:layout_below="@id/et_forget_verification"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="#f2f2f2"
                />
        </RelativeLayout>
    </RelativeLayout>
    <Button
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:textColor="#3087ea"
        android:textSize="14sp"
        android:background="@drawable/bt_forget_next"
        android:text="@string/login_forget_next"
        android:layout_marginBottom="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>